# vapp

./: CMakeLists.txt  README.md  install.sh  setup.sh
Algorithms/AlgoBase/: CMakeLists.txt
Algorithms/AlgoBase/AlgoBase/: AlgoBase.h
Algorithms/AlgoBase/src/: AlgoBase.cpp
App/: main.cpp
DataManager/Config/: CMakeLists.txt
DataManager/Config/Config/: Config.h
DataManager/Config/src/: Config.cpp
DataManager/DataLoader/: CMakeLists.txt
DataManager/DataLoader/DataLoader/: Cloud.h
DataManager/DataLoader/src/: Cloud.cpp
Visualization/QtManager/: CMakeLists.txt
Visualization/QtManager/QtManager/: QtManager.h
Visualization/QtManager/src/: QtManager.cpp
